--- a/disk/rootfs/etc/config
+++ b/disk/rootfs/etc/config
@@ -1,2 +1,2 @@
 SHELL=/bin/minishell.lua
-ONINIT=/bin/minishell.lua,/bin/another_process.lua
+ONINIT=/bin/minishell.lua:1,/bin/another_process.lua:0
